Show account book on settigns

--- a/app/lib/i18n/locales/en/main.json
+++ b/app/lib/i18n/locales/en/main.json
@@ -62,6 +62,9 @@
         "header": {
             "title": "Settings"
         },
+        "switch": "switch",
+        "add_account_book": "Add Account Book",
+        "accountBooks": "Account Books",
         "language": "Language",
         "en": "English",
         "ko": "Korean"
