--- a/app/lib/i18n/locales/en/main.json
+++ b/app/lib/i18n/locales/en/main.json
@@ -63,7 +63,7 @@
             "title": "Settings"
         },
         "switch": "switch",
-        "add_account_book": "Add Account Book",
+        "add_account_book": "+Book",
         "accountBooks": "Account Books",
         "language": "Language",
         "en": "English",
