Set default budget

--- a/app/lib/i18n/locales/en/main.json
+++ b/app/lib/i18n/locales/en/main.json
@@ -55,6 +55,11 @@
         "title": "Budget",
         "header": {
             "title": "Budget"
+        },
+        "default_budget": {
+            "title": "Set Default Budget",
+            "description": "Do you want to set a budget from the previous month?",
+            "areyousure": "Are you sure you don't want to set a default budget?"
         }
     },
     "settings": {
@@ -81,6 +86,8 @@
         "delete": "Delete",
         "confirm": "Confirm",
         "cancel": "Cancel",
+        "yes": "Yes",
+        "no": "No",
         "delete_alert": "Do you want to delete it?",
         "delete_repeat_alert": "Do you want to delete repeat expenses?",
         "delete_repeat_option": {
