--- a/app/lib/i18n/locales/ko/main.json
+++ b/app/lib/i18n/locales/ko/main.json
@@ -14,6 +14,15 @@
         "title": "분석차트",
         "header": {
             "title": "분석차트"
+        },
+        "no-data": "데이터가 없습니다",
+        "date-range": {
+            "this": "이번 달",
+            "last-30d": "지난 30일",
+            "last-90d": "지난 90일",
+            "last-180d": "지난 180일",
+            "last-365d": "지난 365일",
+            "custom": "사용자 정의"
         }
     },
     "new_input": {
