--- a/app/lib/i18n/locales/ko/main.json
+++ b/app/lib/i18n/locales/ko/main.json
@@ -28,7 +28,9 @@
     "search": {
         "header": {
             "title": "검색"
-        }
+        },
+        "init": "검색 기준을 입력하고 검색을 클릭하여 거래를 확인하세요.",
+        "no-data": "거래가 없습니다."
     },
     "new_input": {
         "title": "새 아이템",
