Search for only pending

--- a/app/lib/i18n/locales/en/main.json
+++ b/app/lib/i18n/locales/en/main.json
@@ -123,6 +123,7 @@
         "searching": "Searching...",
         "search-keyword": "Search keyword",
         "reset": "Reset",
+        "pending-only": "Pending only",
         "expense": "Expense",
         "investment": "Investment",
         "last_month_income": "Last Month Income",
