--- a/app/lib/i18n/locales/ko/main.json
+++ b/app/lib/i18n/locales/ko/main.json
@@ -125,6 +125,7 @@
         "reset": "초기화",
         "investment": "투자",
         "last_month_income": "지난달 수익",
+        "pending-only": "보류중",
         "expense": "지출",
         "balance": "잔액",
         "income": "수입",
